--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,42 @@
 * {
-    margin: 0;
+    margin: 0px 30px;
     padding: 0;
 }
 
-header {
+.banner {
     background-image: url(../resources/Banner\ Image.png);
     background-repeat: no-repeat;
     background-position: center;
     height: 600px;
     text-align: center;
     color: white;
+    margin: 30px 0px 70px;
 }
 
-.Title {
-    padding: 120px 0px;
+.banner-title {
+    padding: 180px 0px;
+    /* font-size: 40px; */
+    color: whitesmoke;
+}
+
+.deals {
+    text-align: center;
+}
+
+.deals h1 {
+    font-size: 70px;
+    color: red;
+    padding-bottom: 15px;
+}
+
+.deals p {
+    font-size: 18px;
+    color: red;
+    padding-bottom: 20px;
+}
+
+.deals h2 {
+    font-size: 35px;
+    padding-bottom: 40px;
+
 }
