details part styles added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,3 +78,38 @@ main {
     padding-left: 40px;
     cursor: pointer;
 }
+
+.details {
+    background-color: rgb(248, 237, 250);
+    margin: 0;
+    height: 480px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.details-container {
+    padding-top: 125px;
+}
+
+.details-container p {
+    font-size: 25px;
+    font-weight: 600;
+    padding: 6px;
+}
+
+.text-color {
+    color: red;
+    margin: 0;
+}
+
+.details-container button {
+    color: white;
+    font-size: 25px;
+    font-weight: 700;
+    background-color: red;
+    border: 1px solid red;
+    border-radius: 5px;
+    margin-top: 30px;
+    padding: 6px 20px;
+    cursor: pointer;
+}
