--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,10 @@
+/* Common styles */
 * {
     margin: 0px 30px;
     padding: 0;
 }
 
+/* Header-part styles */
 .banner {
     background-image: url(../resources/Banner\ Image.png);
     background-repeat: no-repeat;
@@ -20,56 +22,58 @@
     color: whitesmoke;
 }
 
+/* Main-part styles */
 main {
     margin: 0;
 }
 
-.deals {
+/* Section (deals) */
+.deals-section {
     text-align: center;
 }
 
-.deals h1 {
+.deals-section h1 {
     font-size: 70px;
     color: red;
     padding-bottom: 15px;
 }
 
-.deals p {
+.deals-section p {
     font-size: 18px;
     color: red;
     padding-bottom: 20px;
 }
 
-.deals h2 {
+.deals-section h2 {
     font-size: 35px;
     padding-bottom: 40px;
 }
 
-.party {
+/* Section (party) */
+.party-section {
     background-image: url(../resources/Vectorrr.png);
     background-position: center;
     background-repeat: no-repeat;
     height: 600px;
     display: flex;
     color: white;
-    margin: 70px 0px 70px;
-    padding-top: 70px;
+    margin: 70px 0px;
 }
 
 .year-image {
     padding-right: 50px;
 }
 
-.party h1 {
+.party-section h1 {
     font-size: 70px;
     padding-top: 100px;
 }
 
-.party p {
+.party-section p {
     padding: 30px 0px;
 }
 
-.party button {
+.party-section button {
     color: white;
     font-size: 20px;
     font-weight: 700;
@@ -79,19 +83,17 @@ main {
     cursor: pointer;
 }
 
-.details {
+/* Section (details) */
+.details-section {
     background-color: rgb(248, 237, 250);
     margin: 0;
-    height: 480px;
+    height: 320px;
     border-radius: 5px;
     text-align: center;
-}
-
-.details-container {
     padding-top: 125px;
 }
 
-.details-container p {
+.details-section p {
     font-size: 25px;
     font-weight: 600;
     padding: 6px;
@@ -102,7 +104,7 @@ main {
     margin: 0;
 }
 
-.details-container button {
+.details-section button {
     color: white;
     font-size: 25px;
     font-weight: 700;
@@ -112,4 +114,114 @@ main {
     margin-top: 30px;
     padding: 6px 20px;
     cursor: pointer;
+}
+
+/* Section (offer) */
+.offer-section {
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 0px;
+}
+
+/* Left-side */
+.best-offer {
+    margin: 50px 0px;
+    width: 35%;
+}
+
+.best-offer h4 {
+    color: red;
+    margin: 10px 0px;
+    font-size: 20px;
+}
+
+.best-offer h1 {
+    font-size: 40px;
+    margin: 10px 0px;
+}
+
+.best-offer p {
+    color: rgba(22, 22, 21, 0.411);
+    margin: 10px 0px;
+}
+
+/* Middle-image */
+.middle-image img {
+    padding: 40px;
+    border: 10px solid red;
+    border-radius: 100%;
+}
+
+/* Right-side */
+.year-part {
+    margin: 50px 0px;
+    width: 30%;
+}
+
+.year-part h2 {
+    color: red;
+    margin: 10px 0px;
+    font-size: 40px;
+}
+
+.year-part p {
+    color: rgba(22, 22, 21, 0.411);
+    margin: 10px 0px;
+}
+
+/* Section (sale-section) */
+
+.sale-heading {
+    text-align: center;
+    margin: 0px 100px 60px;
+}
+
+.sale-heading h4 {
+    font-size: 20px;
+}
+
+.sale-heading h1 {
+    font-size: 80px;
+    margin: 10px 0px;
+}
+
+/* Image-part-left */
+
+/* Section (gifts-section) */
+.gifts-section {
+    margin: 70px 0px;
+}
+
+/* Portfolio-part */
+.portfolio {
+    margin: 0px;
+    width: 60%;
+}
+
+.portfolio h4 {
+    color: red;
+    margin: 10px 0px;
+    font-size: 20px;
+}
+
+.portfolio h1 {
+    font-size: 40px;
+    margin: 10px 0px;
+}
+
+.portfolio p {
+    color: rgba(22, 22, 21, 0.411);
+    margin: 10px 0px;
+}
+
+/* Images-part */
+.gift-images {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.gift-images img {
+    margin: 10px 0px;
+    width: 32%;
 }
