--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,7 @@ main {
 
 .year-image {
     padding: 50px;
+    margin-left: 60px;
 }
 
 .party-section h1 {
@@ -72,6 +73,7 @@ main {
 
 .party-section p {
     padding: 30px 0px;
+    color: rgb(255, 255, 255);
 }
 
 .party-section button {
@@ -143,7 +145,7 @@ main {
 
 .best-offer p {
     color: rgba(22, 22, 21, 0.411);
-    margin: 10px 0px;
+    margin: 20px 0px;
 }
 
 /* Middle-image */
@@ -168,7 +170,7 @@ main {
 
 .year-part p {
     color: rgba(22, 22, 21, 0.411);
-    margin: 10px 0px;
+    margin: 20px 0px;
 }
 
 /* Section (sale) */
@@ -230,6 +232,11 @@ main {
 .gift-images img {
     margin: 10px 0px;
     width: 32%;
+}
+
+.gift-images img:hover {
+    border: 3px solid rgba(0, 0, 0, 0.616);
+    border-radius: 20px;
 }
 
 /* Section (newsletter) */
@@ -297,12 +304,24 @@ footer p {
     justify-content: space-between;
 }
 
+.contacts i {
+    font-size: 12px;
+    padding-right: 5px;
+}
+
+.border1 {
+    margin-top: 30px;
+    border: 1px solid rgba(61, 60, 60, 0.404);
+}
+
 .button-container {
     text-align: center;
-    margin: 40px 0px;
     padding: 20px 0px;
-    border-top: 2px solid rgba(61, 60, 60, 0.404);
-    border-bottom: 2px solid rgba(61, 60, 60, 0.404);
+}
+
+.border2 {
+    margin-bottom: 30px;
+    border: 1px solid rgba(61, 60, 60, 0.404);
 }
 
 .button-container button {
